Creating Print Functions to visualizes wheretree table